# 4DVisualizerQuiz

./: .gitignore  DEPLOYMENT_GUIDE.md  FourShape.py  IntModelWireframeVeloAxis.py  IntModelWireframeVeloAxis_Fast.py  MAINCellHl.py  MAINWShell.py  MAINWireframe.py  Model3LAYER.py  Model3WIREFRAME.py  PYGBAG_SETUP.md  README.md  SETUP_COMPLETE.md  Tesseract.py  ThreeShape.py  WEB_README.md  build.bat  build.sh  build.toml  index.html  main.py  pyproject.toml  requirements.txt  testCubeLayerPaint.py  testCubeWireBreakPaint.py  testCubeWireLayerPaint copy.py
Senior_Project/: AniModel4CELLHL.py  AniModel4WIREFRAME.py  Edge.py  Graph.py  IntModel4CELLHL.py  IntModel4CellHlVeloAxis.py  IntModel4CellHlVeloAxis_O3D.py  IntModel4CellWShells_Fast.py  IntModel4WIREFRAME.py  IntModelWireframeWShells_Fast.py  MAIN.py  Model3ACTIVE.py  Model3SURFACE.py  Model3VELO.py  Origin.py  analyze.py  index.html  origin_viewer.py  pyvenv.cfg  testGUI.py
docs/: index.html  visualizer4d.apk
src/: Cube.py  MAINCellHl.py  MAINInterface.py  OriginRenderer.py  Tetrahedron.py  main.py  origin_viewer.py
visualizer4d/: Cube.py  FiveCell.py  FourShape.py  MAINCellHl.py  MAINInterface.py  MAINTutorial.py  MAINWShell.py  MAINWireframe.py  OriginRenderer.py  SixteenCell.py  SquareAntiprisma.py  Tesseract.py  TetraBipyramid.py  ThreeAxis.py  ThreeShape.py  TriPrism.py  WedgeCell.py  cc_log.txt  main.py  patch.py  pygbag.ini  wAxis.py
visualizer4d/texts/: interval_0.txt  interval_1.txt  interval_2.txt  interval_3.txt  interval_CellHl_1.txt  interval_CellHl_2.txt  interval_WShells_1.txt  (+3 more)
